Moved INI stuff into its own class, discarded previous Ini implementation from Applet.